# wasp-general

./: .gitignore  .travis.yml  Jenkinsfile  Jenkinsfile.docs  Jenkinsfile.pep8  MANIFEST.in  README  README.md  TODO  dev-requirements.txt  requirements.txt  setup.cfg  setup.py  sphinx.sh
debian/: changelog  control
docs/sphinx/: conf.py  introduction.rst
extra/snippets/: file.py
tests/: .coveragerc  conftest.py  pytest-cov.ini  pytest-pep8.ini  pytest.ini  wasp_general_api_capability_test.py  wasp_general_api_cast_test.py  wasp_general_api_check_test.py  wasp_general_api_command_command_test.py  wasp_general_api_command_context_test.py  wasp_general_api_command_template_command_test.py  wasp_general_api_composer_test.py  wasp_general_api_onion_base_test.py  wasp_general_api_onion_layers_test.py  wasp_general_api_onion_proto_test.py  wasp_general_api_onion_test.py  wasp_general_api_registry_test.py  wasp_general_api_signals_impl_test.py  wasp_general_api_signals_proto_test.py  wasp_general_api_signals_test.py  wasp_general_api_task_base_test.py  wasp_general_api_task_launcher_test.py  wasp_general_api_task_loop_test.py  wasp_general_api_task_proto_test.py  wasp_general_api_task_registry_test.py  wasp_general_api_task_scheduler_test.py  wasp_general_api_task_thread_test.py  wasp_general_api_transformation_test.py  wasp_general_api_uri_test.py  wasp_general_args_cast_test.py  wasp_general_args_check_test.py  wasp_general_args_checker_test.py  wasp_general_atomic_test.py  wasp_general_cache_test.py  wasp_general_capability_test.py  wasp_general_check_verify_test.py  wasp_general_command_command_test.py  wasp_general_command_context_test.py  wasp_general_command_test.py  wasp_general_config_test.py  (+67 more)
wasp_general/: args_checker.py  cache.py  capability.py  cli.py  command.py  command_context.py  composer.py  config.py  csv.py  curses_cli.py  datetime.py  defaults.ini  io.py  mime.py  package.json  platform.py  polling.py  template.py  thread.py  uri.py  verify.py  version.py
(+144 files in other folders)
