[metadata]
name = wasp-general
url = https://github.com/a1ezzz/wasp-general
description = Collection of loosely coupled functions and classes widely used across different wasp-projects
author = Ildar Gafurov
author_email = dev@binblob.com
maintainer = Ildar Gafurov
maintainer_email = dev@binblob.com
license = GNU Lesser General Public License v3
long_description = file: README.md, CHANGELOG, LICENSE

version = attr:wasp_general.version.__version__

keywords = wasp cli network lvm threads validation

classifiers =
	Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
	License :: OSI Approved :: GNU General Public License v3 (GPLv3)
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules

[options]
zip_safe = False
packages = find:
setup_requires =
	pytest-runner
	sphinx<1.7
	recommonmark

install_requires =
	wasp-c-extensions
	decorator
	cryptography
	python_magic
	pyzmq
	tornado
	pytz
	webdavclient3

tests_require =
	pytest
	pytest-asyncio
	pytest-html
	pytest-cov
	pytest-flake8
	flake8==4  # the 5th version doesn't work with the pytest-flake8

[options.extras_require]
dev =
	twine
	coveralls
test =
	pytest
	pytest-asyncio
	pytest-html
	pytest-cov
	pytest-flake8
	flake8==4  # the 5th version doesn't work with the pytest-flake8

template =
	mako

all = wasp-general[dev,test,template]

[aliases]
test=pytest

[tool:pytest]
python_files = tests/*_test.py
addopts = -v --html=docs/pytest/index.html
